# scratch-to-python

./: .gitignore  AGENTS.md  README.md  pyproject.toml
scratch2py/: __init__.py  cli.py  codegen.py  emit.py  ir.py  model.py  parser.py  unpack.py  util.py
scratch2py/blocks/: __init__.py  control.py  events.py  looks.py  motion.py  operators.py  sensing.py  sound.py  variables.py
scratch2py/runtime/: __init__.py  assets.py  engine.py  ops.py  sprite.py  stage.py  target.py  values.py
tests/: _fixtures.py  conftest.py  test_codegen.py  test_pipeline.py  test_values.py
